<resources>
    <string name="app_name">ECommerce</string>
    <string name="item_name">California orange 8 pcs</string>
    <string name="item_price">$15.00</string>
    <string name="bestselling">BEST SELLING</string>
    <string name="category">OUR CATEGORIES</string>
    <string name="feature">FEATURED PRODUCTS</string>
    <string name="salmon">SALMON FISH</string>
    <string name="furniture">FURNITURE COLLECTION</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="demoSubtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="strikethrough_actualPrice"><strike>$699.0</strike></string>
    <string name="quantity">Quantity:</string>
    <string name="description">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."</string>
    <string name="description_title">Description</string>
    <string name="category_name">Category Name</string>
</resources>