<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/productImage1"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:background="@color/shimmerColor"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/productName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/productImage1"
        app:layout_constraintTop_toBottomOf="@id/productImage1"
        android:text="Product Name"
        android:background="@color/shimmerColor"
        android:fontFamily="@font/lato"
        android:textColor="@color/shimmerColor"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/productSubTitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/shimmerColor"
        app:layout_constraintTop_toBottomOf="@id/productName1"
        app:layout_constraintStart_toStartOf="@id/productName1"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/shimmerColor"
        android:text="@string/demoSubtitle"
        android:fontFamily="@font/lato"/>
    <TextView
        android:id="@+id/discountPrice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:text="$349.0"
        android:fontFamily="@font/lato"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/shimmerColor"
        android:background="@color/shimmerColor"
        app:layout_constraintTop_toBottomOf="@id/productSubTitle1"
        app:layout_constraintStart_toStartOf="@id/productSubTitle1"/>
    <TextView
        android:id="@+id/actualPrice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/strikethrough_actualPrice"
        android:fontFamily="@font/lato"
        android:background="@color/shimmerColor"
        android:textSize="24sp"
        android:textColor="@color/shimmerColor"
        app:layout_constraintStart_toEndOf="@id/discountPrice1"
        app:layout_constraintTop_toTopOf="@id/discountPrice1"
        app:layout_constraintBottom_toBottomOf="@id/discountPrice1">
    </TextView>

    <TextView
        android:id="@+id/quantity_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        app:layout_constraintStart_toStartOf="@id/divider_1"
        android:layout_marginTop="24dp"
        android:text="@string/quantity"
        android:background="@color/shimmerColor"
        android:textColor="@color/shimmerColor"
        android:fontFamily="@font/lato"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/quantity_tb1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/quantity_title1"
        app:layout_constraintStart_toEndOf="@id/quantity_title1"
        app:layout_constraintBottom_toBottomOf="@id/quantity_title1"
        app:layout_constraintEnd_toStartOf="@id/remove_btn1"
        android:layout_marginHorizontal="8dp"
        android:padding="8dp"
        android:backgroundTint="@color/shimmerColor"
        android:text=""
        android:gravity="center"
        android:fontFamily="@font/lato"
        android:textColor="#83868C"
        android:textSize="16sp"
        android:background="@drawable/round_shape"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/add_btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:elevation="16dp"
        android:padding="8dp"
        android:src="@drawable/ic_remove"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="@id/quantity_tb1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintTop_toTopOf="@id/quantity_tb1"
        app:layout_constraintWidth_percent=".07">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/shimmerColor"
            android:src="@drawable/ic_add" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/remove_btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:elevation="16dp"
        android:padding="8dp"
        android:src="@drawable/ic_remove"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="@id/quantity_tb1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/add_btn1"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintTop_toTopOf="@id/quantity_tb1"
        app:layout_constraintWidth_percent=".07">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/shimmerColor"
            android:src="@drawable/ic_remove" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/quantity_title1"
        app:layout_constraintStart_toStartOf="@id/quantity_title1"/>

    <TextView
        android:id="@+id/availability1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Availability"
        android:fontFamily="@font/lato"
        android:textColor="@color/shimmerColor"
        android:textSize="16sp"
        android:background="@color/shimmerColor"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/discountPrice1"
        app:layout_constraintTop_toBottomOf="@id/discountPrice1"/>

    <TextView
        android:id="@+id/stock_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:textColor="@color/shimmerColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".22"
        android:background="@color/shimmerColor"
        app:layout_constraintStart_toEndOf="@id/availability1"
        app:layout_constraintTop_toTopOf="@id/availability1"
        tools:text="In stock" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/availability1"
        app:layout_constraintStart_toStartOf="@id/availability1"/>

    <TextView
        android:id="@+id/description_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato"
        android:textStyle="bold"
        android:background="@color/shimmerColor"
        android:text="@string/description_title"
        android:textColor="@color/shimmerColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/divider_2"
        app:layout_constraintTop_toBottomOf="@id/divider_2" />

    <TextView
        android:id="@+id/description_tv1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lato"
        android:background="@color/shimmerColor"
        android:textColor="#2F2F2F"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/divider_2"
        app:layout_constraintStart_toStartOf="@id/description_title1"
        app:layout_constraintTop_toBottomOf="@id/description_title1"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>